--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
             <div class="col-8">
                 <form id="generate-form">
                     <div class="row">
+                        <div class="col-12">
+                            <div class="form-group">
+                                <label>Canvas size</label>
+                                <div class="input-group">
+                                    <input type="number" id="canvas-size" class="form-control" value="1024" step="1" min="1">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">px</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-4">
                             <div class="form-group">
                                 <label>Background color</label>
@@ -69,7 +80,7 @@
                         <div class="col-4">
                             <div class="form-group">
                                 <label>Icon scale</label>
-                                <input type="number" id="icon-scale" class="form-control" value="1" step="0.0001" min="0">
+                                <input type="number" id="icon-scale" class="form-control" value="0.5" step="0.0001" min="0">
                             </div>
                         </div>
                         <div class="col-6">
