--- a/index.html
+++ b/index.html
@@ -80,9 +80,21 @@
                         <div class="col-4">
                             <div class="form-group">
                                 <label>Icon scale</label>
-                                <input type="number" id="icon-scale" class="form-control" value="0.5" step="0.0001" min="0">
+                                <input type="number" id="icon-scale" class="form-control" value="0.4" step="0.0001" min="0">
                             </div>
                         </div>
+                        <div class="col-4">
+                            <div class="form-group">
+                                <label>Icon rotate</label>
+                                <div class="input-group">
+                                    <input type="number" id="icon-rotate" class="form-control" value="45" step="1" min="0" max="360">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">deg</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-100"></div>
                         <div class="col-6">
                             <div class="form-group">
                                 <label>Adjust icon top</label>
