--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <title>icon generate</title>
 
+    <link rel="shortcut icon" href="./static/favicon.png">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./static/style.css">
 </head>
@@ -21,7 +23,7 @@
             <div class="col-8">
                 <form id="generate-form">
                     <div class="row">
-                        <div class="col-12">
+                        <div class="col-6">
                             <div class="form-group">
                                 <label>Canvas size</label>
                                 <div class="input-group">
@@ -32,6 +34,20 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-6">
+                            <div class="form-group">
+                                <label>Canvas padding</label>
+                                <div class="input-group">
+                                    <input type="number" id="canvas-padding" class="form-control" value="20" step="1" min="0">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">px</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <hr class="mt-0">
+                        </div>
                         <div class="col-4">
                             <div class="form-group">
                                 <label>Background color</label>
@@ -39,26 +55,29 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">#</span>
                                     </div>
-                                    <input type="text" id="icon-bg" class="form-control text-uppercase" value="007bff">
+                                    <input type="text" id="icon-bg-color" class="form-control text-uppercase" value="007bff">
                                 </div>
                             </div>
                         </div>
                         <div class="col-4">
                             <div class="form-group">
                                 <label>Background opacity</label>
-                                <input type="number" id="icon-bg-opacity" class="form-control" value="1" step="0.0001" min="0" max="1">
+                                <input type="number" id="icon-bg-alpha" class="form-control" value="1" step="0.0001" min="0" max="1">
                             </div>
                         </div>
                         <div class="col-4">
                             <div class="form-group">
                                 <label>Background border radius</label>
                                 <div class="input-group">
-                                    <input type="number" id="icon-round" class="form-control" value="100" step="1" min="0">
+                                    <input type="number" id="icon-bg-round" class="form-control" value="100" step="1" min="0">
                                     <div class="input-group-append">
-                                        <span class="input-group-text">px</span>
+                                        <span class="input-group-text">unit</span>
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="col-12">
+                            <hr class="mt-0">
                         </div>
                         <div class="col-4">
                             <div class="form-group">
@@ -67,55 +86,94 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">#</span>
                                     </div>
-                                    <input type="text" id="icon-fg" class="form-control text-uppercase" value="ffffff">
+                                    <input type="text" id="icon-fg-color" class="form-control text-uppercase" value="ffffff">
                                 </div>
                             </div>
                         </div>
                         <div class="col-4">
                             <div class="form-group">
                                 <label>Icon opacity</label>
-                                <input type="number" id="icon-fg-opacity" class="form-control" value="1" step="0.0001" min="0" max="1">
+                                <input type="number" id="icon-fg-alpha" class="form-control" value="1" step="0.0001" min="0" max="1">
                             </div>
                         </div>
                         <div class="col-4">
                             <div class="form-group">
                                 <label>Icon scale</label>
-                                <input type="number" id="icon-scale" class="form-control" value="0.4" step="0.0001" min="0">
+                                <input type="number" id="icon-fg-scale" class="form-control" value="0.45" step="0.0001" min="0">
                             </div>
                         </div>
                         <div class="col-4">
                             <div class="form-group">
                                 <label>Icon rotate</label>
                                 <div class="input-group">
-                                    <input type="number" id="icon-rotate" class="form-control" value="45" step="1" min="0" max="360">
+                                    <input type="number" id="icon-fg-rotate" class="form-control" value="30" step="1" min="0" max="360">
                                     <div class="input-group-append">
                                         <span class="input-group-text">deg</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="w-100"></div>
-                        <div class="col-6">
+                        <div class="col-4">
                             <div class="form-group">
                                 <label>Adjust icon top</label>
                                 <div class="input-group">
-                                    <input type="number" id="icon-top" class="form-control" value="0" step="1">
+                                    <input type="number" id="icon-fg-top" class="form-control" value="90" step="1">
                                     <div class="input-group-append">
-                                        <span class="input-group-text">px</span>
+                                        <span class="input-group-text">unit</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-4">
                             <div class="form-group">
                                 <label>Adjust icon left</label>
                                 <div class="input-group">
-                                    <input type="number" id="icon-left" class="form-control" value="0" step="1">
+                                    <input type="number" id="icon-fg-left" class="form-control" value="-60" step="1">
                                     <div class="input-group-append">
-                                        <span class="input-group-text">px</span>
+                                        <span class="input-group-text">unit</span>
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="col-12">
+                            <hr class="mt-0">
+                        </div>
+                        <div class="col-4">
+                            <div class="form-group">
+                                <label>Shadow color</label>
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text">#</span>
+                                    </div>
+                                    <input type="text" id="icon-shadow-color" class="form-control text-uppercase" value="000000">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="form-group">
+                                <label>Shadow opacity</label>
+                                <input type="number" id="icon-shadow-alpha" class="form-control" value="0.5" step="0.0001" min="0" max="1">
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="form-group">
+                                <label>Shadow rotate</label>
+                                <div class="input-group">
+                                    <input type="number" id="icon-shadow-rotate" class="form-control" value="45" step="1" min="0" max="360">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">deg</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="form-group">
+                                <label>Shadow length</label>
+                                <input type="number" id="icon-shadow-count" class="form-control" value="600" step="1" min="0">
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <hr class="mt-0">
                         </div>
                         <div class="col-6">
                             <div class="form-group">
@@ -165,12 +223,11 @@
                 </form>
             </div>
             <div class="col-4">
-                <div id="canvas-container">
-                    <div id="output-canvas">
-                        <div id="output-canvas-background"></div>
-                        <div id="output-canvas-icon"></div>
-                    </div>
+                <div id="output-canvas-container">
+                    <canvas id="output-canvas"></canvas>
                 </div>
+
+                <div id="hidden-container" class="d-none"></div>
             </div>
         </div>
 
@@ -187,9 +244,6 @@
                 <a href="https://fontawesome.com/v4.7.0/">FontAwesome 4</a>
             </li>
             <li class="list-inline-item">
-                <a href="https://github.com/tsayen/dom-to-image">tsayen/dom-to-image</a>
-            </li>
-            <li class="list-inline-item">
                 <a href="https://github.com/simplesvg/icons">simplesvg/icons</a>
             </li>
             <li class="list-inline-item">
@@ -199,7 +253,6 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdn.rawgit.com/tsayen/dom-to-image/fae625bc/dist/dom-to-image.min.js"></script>
     <script src="./static/script.js"></script>
 </body>
 </html>
